Update composer.json and dependencies
Require only kohana/core through Composer for version contraint validation.

The needed modules could be required via `composer.json` `require-dev` section
of the Kohana module that is being tested.

--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,23 @@
 {
     "name": "openbuildings/kohana-test-bootstrap",
-    "description": "Kohana core classes repackaged with composer, used to test modules",
+    "description": "Helper package for testing Kohana modules",
     "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Ivan Kerin",
-            "email": "ivan@openbuildings.com",
+            "email": "ikerin@gmail.com",
             "role": "Author"
+        },
+        {
+            "name": "Haralan Dobrev",
+            "email": "hkdobrev@gmail.com",
+            "role": "Maintainer"
         }
     ],
     "autoload": {
         "files": ["bootstrap.php"]
+    },
+    "require": {
+        "kohana/core": "^3.3"
     }
 }
